traversal.zigzag.traversalzigzag.TraversalZigZag.scala.error
Compilation error:
TraversalZigZag:6: error: not found: value Direction
      if(getDirection()==Direction.EAST) {
                         ^