traversal.zigzag.traversalzigzag.TraversalZigZag.scala.code
override def run() {
  droite()
  var cpt=0
  ecritMessage(cpt)
  while(getX()!=getMondeLargeur()-1 | getY()!=getMondeHauteur()-1) {
    if(!estFaceMur()) {
      if(getDirection()==Direction.EAST) {
        setPos(getX()+1,getY())
      }
      else {
        setPos(getX()-1,getY())
      }
    }
    else {
      setPos(getX(),getY()+1)
      retourne()
    }
    cpt=cpt+1
    ecritMessage(cpt)
  }
  gauche()
}